2017-02-13 Henry Butowsky  <henryb@hush.com>
	
	* mods to where_assign() method in grammar so that it can handle vpointers in where body

2017-02-10  Charlie Zender  <zender@uci.edu>

	* Restore correct values for three_dmn_rec_var in in.cdl that were inadvertently changed in 4.6.4

2017-02-09  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.5-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.5-alpha01 final changes';git push
	git tag -a 4.6.5-alpha01 -m 'Version 4.6.5-alpha01 new features: re-introduce fixed USE_NC4_SRD_WORKAROUND';git push --tags

2017-02-08  Charlie Zender  <zender@uci.edu>

	* Re-instate USE_NC4_SRD_WORKAROUND only when strided dimension is first dimension

2017-02-07  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.4 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.4 final changes';git push
	git tag -a 4.6.4 -m 'Version 4.6.4 new features: splitter, stdin, clm_md=dly, cll_msr, frm_trm, cln=365 and srd fixes';git push --tags

	* NCO 4.6.4-beta02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.4-beta02 final changes';git push
	git tag -a 4.6.4-beta02 -m 'Version 4.6.4-beta02 new features: deprecate USE_NC4_SRD_WORKAROUND';git push --tags

2017-02-06 Henry Butowsky  <henryb@hush.com>

	* Switched-off USE_NC4_SRD_WORKAROUND in nco_msa_rcr_clc() in nco_msa.c as algorithm was incorrect

2017-02-01  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.4-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.4-beta01 final changes';git push
	git tag -a 4.6.4-beta01 -m 'Version 4.6.4-beta01 new features: ncclimo stdin option, redirection, blues batch, calendar bugfix';git push --tags

	* Calendar code is MUCH slower on MacOS than Linux, unclear why

	* Henry made sscanf() in custom calendar routines be more fault-tolerant, fixes MacOS aborts

2017-01-27  Charlie Zender  <zender@uci.edu>

	* ncclimo improve shell pattern match for $HOSTNAME for blues and cooley
