@@ -118,8 +118,8 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 4.6.5-alpha01
-@set doc-edition 4.6.5-alpha01
+@set nco-edition 4.6.5-alpha02
+@set doc-edition 4.6.5-alpha02
 @set copyright-years 1995--2017
 @set update-year 2017
 @set update-date 9 February 2017
