@@ -1,6 +1,12 @@
+2017-02-15  Charlie Zender  <zender@uci.edu>
+
+	* NCO 4.6.5-alpha02 release procedure:
+	cd ~/nco;git commit -a -m 'Version 4.6.5-alpha02 final changes';git push
+	git tag -a 4.6.5-alpha02 -m 'Version 4.6.5-alpha02 new features: where() fix for vpointers';git push --tags
+
 2017-02-13 Henry Butowsky  <henryb@hush.com>
-	
-	* mods to where_assign() method in grammar so that it can handle vpointers in where body
+
+	* Modify where_assign() method in grammar so that it can handle vpointers in where() body
 
 2017-02-10  Charlie Zender  <zender@uci.edu>
 
